--- a/front_end/table.html
+++ b/front_end/table.html
@@ -1,3 +1,7 @@
+{% extends 'base.html' %}
+
+{% block content %}
+
 <h1><a href={{ url_for("index") }}>Back To Our Ebay Store</a></h1>
 <h2>{{ title}}</h2>
 <html>
@@ -7,3 +11,5 @@
     </div>
   </body>
 </html>
+
+{% endblock %}
