- Added product database + REST functions - Added Admin page for addign / deleting products (requires Oauth via security.py) - Added admin page for adding / deleting users (requires Oauth via security.py) - User page for account signup, which adds users (no oauth) - Main page has pagination - REST services all have appropriate pagination / API routes - Email verification via microservice - Notifications everywhere for adding / deleting products (Amazon SNS)

--- a/front_end/admin_accounts.html
+++ b/front_end/admin_accounts.html
@@ -1,15 +1,20 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
 <div class="container">
   <div class="row">
     <div class="col">
 
         <h1><a href={{ url_for("index") }}>Back To Our Ebay Store</a></h1>
+
+    <h2>Admin page: search for, create, and delete accounts</h2>
+
+            <p> "Welcome back! Google auth token info: {{ google_auth_token }}. TODO find the email name from this access token</p>
+
       <hr>
 
-    <h2>Signup for Account</h2>
-    <form action="" method="post" novalidate>
+    <form action="" method="post">
         <p>
             {{ form.first_name.label }}<br>
             {{ form.first_name(size=32) }}
@@ -20,17 +25,15 @@
             {{ form.last_name(size=32) }}
         </p>
 
-        <p>
     <p>
             {{ form.email.label }}<br>
             {{ form.email(size=32) }}
         </p>
-
+<p>{{ form.action()}}</p>
         <p>{{ form.submit() }}</p>
     </form>
 
     </div>
   </div>
 </div>
-
 {% endblock %}
