Final edits before uploading to amazon

--- a/front_end/admin_products.html
+++ b/front_end/admin_products.html
@@ -10,7 +10,7 @@
 
     <h2>Admin page: search for, create, and delete products</h2>
 
-            <p> "Welcome back! Google auth token info: {{ google_auth_token }}. TODO find the email name from this access token</p>
+            <p> Welcome back, administrator! Google auth token info: {{ google_auth_token }}</p>
 
       <hr>
 
