Fixed Seller microservice stuff as well

--- a/static/admin_products.html
+++ b/static/admin_products.html
@@ -36,6 +36,11 @@
             {{ form.image(size=32) }}
         </p>
 
+        <p>
+            {{ form.seller_no.label }}<br>
+            {{ form.seller_no(size=32) }}
+        </p>
+
 
 <p>{{ form.action()}}</p>
         <p>{{ form.submit() }}</p>
