--- a/static/admin_seller.html
+++ b/static/admin_seller.html
@@ -1,36 +1,34 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
 <div class="container">
   <div class="row">
     <div class="col">
 
         <h1><a href={{ url_for("index") }}>Back To Our Ebay Store</a></h1>
+
+    <h2>Admin page: search for, create, and delete sellers</h2>
+
+            <p> Welcome back, administrator! Google auth token info: {{ google_auth_token }}</p>
+
       <hr>
 
-    <h2>Signup for Account</h2>
     <form action="" method="post">
         <p>
-            {{ form.first_name.label }}<br>
-            {{ form.first_name(size=32) }}
+            {{ form.charity_name.label }}<br>
+            {{ form.charity_name(size=32) }}
         </p>
 
-    <p>
-            {{ form.last_name.label }}<br>
-            {{ form.last_name(size=32) }}
-        </p>
-
-        <p>
     <p>
             {{ form.email.label }}<br>
             {{ form.email(size=32) }}
         </p>
-
+<p>{{ form.action()}}</p>
         <p>{{ form.submit() }}</p>
     </form>
 
     </div>
   </div>
 </div>
-
 {% endblock %}
