--- a/static/index.html
+++ b/static/index.html
@@ -14,7 +14,8 @@
    	   	<h1 class="Heading">Our Ebay Store</h1>
    	   </div>
 
-   <div class="links"><a href={{ url_for('signup') }}> Click here to sign up</a></div>
+   <div class="links"><a href={{ url_for('signup') }}> Click here to sign up as a new user</a></div>
+   <div class="links"><a href={{ url_for('seller_signup') }}> Click here to apply to be a partner charity</a></div>
 
     {% for product in products %}
 
@@ -54,6 +55,8 @@
    <div class="links"><a href={{ url_for('admin_accounts') }}> Admins click here to manage users </a></div>
 
    <div class="links"><a href={{ url_for('admin_products') }}> Admins click here to manage products </a></div>
+
+   <div class="links"><a href={{ url_for('admin_sellers') }}> Admins click here to manage sellers </a></div>
    </div>
 
 {% endblock %}
