--- a/static/admin_products.html
+++ b/static/admin_products.html
@@ -32,6 +32,11 @@
         </p>
 
         <p>
+            {{ form.description.label }}<br>
+            {{ form.description(size=32) }}
+        </p>
+
+        <p>
             {{ form.image.label }}<br>
             {{ form.image(size=32) }}
         </p>
