- Changed context.py to add in RDS information - Created a file rds_setup.py which easily runs the SQL scripts automatically for any database to set up our tables - Deployed our site for the first time on elastic beanstalk

--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
 <body>
 {% block products %}
 <head>
-	<title>Our Ebay Store</title>
+	<title>Charity Store</title>
 	<link rel="stylesheet" type="text/css" href="../static/products.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,900" rel="stylesheet">
 
