--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
 {% block products %}
 <head>
 	<title>Charity Store</title>
-	<link rel="stylesheet" type="text/css" href="../static/products.css">
+	<link rel="stylesheet" type="text/css" href="https://charitystore-s3.s3.us-east-1.amazonaws.com/products.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,900" rel="stylesheet">
 
 </head>
