--- a/static/reviews.html
+++ b/static/reviews.html
@@ -1,6 +1,6 @@
 <html>
  <head>
-    <link rel="stylesheet" type="text/css" href="/static/reviews.css">
+    <link rel="stylesheet" type="text/css" href="https://charitystore-s3.s3.us-east-1.amazonaws.com/reviews.css">
  </head>
  <body>
     <div class="container bootstrap snippets bootdey">
